--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,20 @@
 cmake_minimum_required(VERSION 3.20)
 project(pangea-cpp VERSION 1.0.0 LANGUAGES CXX)
 
-# Set C++ standard
+# Set C++20 standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add compiler flags for better debugging and warnings
-set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -Wall -Wextra -Wpedantic")
+# Add compiler flags for modern C++
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
 
 # Set default build type
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
-
-# Include directories
-include_directories(include)
 
 # Source files
 set(SOURCES
@@ -28,32 +26,14 @@ set(SOURCES
 
 # Create static library for core functionality
 add_library(pangea_core STATIC ${SOURCES})
-target_include_directories(pangea_core PUBLIC include)
+target_include_directories(pangea_core PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+target_compile_features(pangea_core PUBLIC cxx_std_20)
 
 # Main executable
 add_executable(pangea src/main.cpp)
-target_link_libraries(pangea pangea_core)
-
-# Enable testing
-enable_testing()
-
-# Fetch Catch2
-include(FetchContent)
-FetchContent_Declare(
-    Catch2
-    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG v3.4.0
-)
-FetchContent_MakeAvailable(Catch2)
-
-# Test executable
-add_executable(pangea_tests 
-    tests/test_main.cpp
-)
-target_link_libraries(pangea_tests pangea_core Catch2::Catch2WithMain)
-
-# Add test
-add_test(NAME pangea_unit_tests COMMAND pangea_tests)
+target_link_libraries(pangea PRIVATE pangea_core)
 
 # Install targets
 install(TARGETS pangea DESTINATION bin)
@@ -63,3 +43,44 @@ install(DIRECTORY examples/ DESTINATION share/pangea/examples)
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "C++ standard: ${CMAKE_CXX_STANDARD}")
 message(STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
+
+# Optional testing (disabled by default to avoid dependency issues)
+option(BUILD_TESTS "Build test suite (requires Catch2)" OFF)
+
+if(BUILD_TESTS)
+    enable_testing()
+    message(STATUS "Building tests enabled")
+    
+    # Try to find system Catch2 first
+    find_package(Catch2 3 QUIET)
+    if(Catch2_FOUND)
+        message(STATUS "Found system Catch2 v3")
+    else()
+        find_package(Catch2 2 QUIET)
+        if(Catch2_FOUND)
+            message(STATUS "Found system Catch2 v2")
+        else()
+            message(WARNING "Catch2 not found. Install with: sudo apt-get install catch2-dev")
+            return()
+        endif()
+    endif()
+    
+    # Test executable
+    add_executable(pangea_tests 
+        tests/test_main.cpp
+    )
+    
+    target_link_libraries(pangea_tests PRIVATE 
+        pangea_core 
+        Catch2::Catch2WithMain
+    )
+    
+    target_include_directories(pangea_tests PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+    )
+    
+    # Register tests with CTest
+    include(CTest)
+    add_test(NAME pangea_unit_tests COMMAND pangea_tests)
+    
+endif()
