Add VS Code configuration for rlwrap integration and update documentation
- Add launch.json with rlwrap configuration for enhanced interactive mode
- Update tasks.json with CMake build tasks and rlwrap execution task
- Update README.md with rlwrap usage instructions and flexible Catch2 v3 documentation
- Provide comprehensive VS Code integration for development workflow

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 build/
 build-*/
 out/
+# CLion build directories
+cmake-build-*/
 
 # CMake generated files
 CMakeFiles/
@@ -73,3 +75,4 @@ docs/latex/
 *.zip
 *.tar.gz
 *.7z
+/cmake-build-debug/
